--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 
     <head>
         <title>Excursion</title>
-        <link href="./css/style.css" type="text/css" rel="stylesheet"/>
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
-
-        <div class="header">
-            <h1>Discover hidden places in the world around you</h1>
-                <p>Download Excursion (Coming soon!)</p>
-        </div>
+        <!--main area-->
+        
+        <h1>Discover hidden places in the world around you</h1>
+            <p><u>Download Excursion (Coming soon!)</u></p>
+   
+        <!--video-->
+        <video autoplay muted loop>
+            <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        </video>
 
     </body>
 </html>
