Pretty sure this is the finished product

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     </head>
 
     <body>
-        <!--main area-->
-        
+        <!--heading-->
         <h1>Discover hidden places in the world around you</h1>
             <p><u>Download Excursion (Coming soon!)</u></p>
    
@@ -18,5 +17,16 @@
             <source src="./resources/videos/excursion.mp4" type="video/mp4">
         </video>
 
+        <!--midpage-header-->
+        <div class="mid">
+            <h2>Your personal travel guide</h2>
+                <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        </div>
+
+        <div class="bottom-images">
+            <img src="./resources/images/camp.webp"/>
+            <br>
+            <img src="./resources/images/phone.webp"/>
+        </div>
     </body>
 </html>
